# AOS573

./: .gitignore  Intro_to_Python.ipynb  README.md  more_test_stuff  test_file.txt  test_stuff
Environments/: aos573_f23.yml  aos573_f25.yml  satpy_env.yml
FinalProject_Example/: README.md  analysis.ipynb
Homework/: 20210901_IndianOcean.npz  Homework1.ipynb  Homework2.ipynb  Homework3.ipynb  Homework4.ipynb  Homework5.ipynb  Homework6.ipynb  SGF2011052212Z.txt  another_dot_product.py
Homework/data/: SGF2011052212Z.txt  SImon_CanESM5_historical_r1i1p2f1_gn_185001-201412_mean.nc
InClass/: ClassNotebook1.ipynb  ClassNotebook10.ipynb  ClassNotebook2.ipynb  ClassNotebook3.ipynb  ClassNotebook4.ipynb  ClassNotebook5.ipynb  ClassNotebook6.ipynb  ClassNotebook7.ipynb  ClassNotebook8.ipynb
InClass/data/: census_2000_2019.csv  earth_sci_phds_1980_2019.csv  trmm.2016-07-31T12.nc
Lectures/: 3d_plotting.ipynb  3d_plotting_solution.py  AOS573_F21_EoS.yml  Dask.ipynb  Getting_Started.ipynb  Intro_to_Python.ipynb  Intro_to_git_and_github.ipynb  Satpy.ipynb  Scipy.ipynb  Using_git_for_class.ipynb  addition.py  animations.ipynb  detrend.nino34.ascii.txt  git_and_github.ipynb  hvplot.ipynb  metpy.ipynb  numpy_and_matplotlib.ipynb  packaging_code.ipynb  pandas.ipynb  python_environments.ipynb  regridding.ipynb  scikit-learn.ipynb  seaborn.ipynb  viz_and_mapping.ipynb  xarray.ipynb  xgcm.ipynb
Lectures/data/: siconc_SImon_CanESM5_historical_r1i1p2f1_gn_185001-201412_mean.nc
Lectures/make_axis_circular_package/: pyproject.toml
Lectures/make_axis_circular_package/make_ax_circular/: make_ax_circular_module.py
Lectures/make_axis_circular_package/src/tests/: test_make_ax_circular_module.py
Lectures/make_cartopy_axis_circular/: AOS573_F21.yml  README.md  (+1 more)
(+7 files in other folders)
