[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "make_ax_circular"
version = "0.0.1"
dependencies = ['numpy','matplotlib','cartopy']
authors = [{ name = "Hannah Zanowski", email ="zanowski@wisc.edu"}]
description = "A package for making cartopy axes circular"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICESNE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]
